feat: complete first API
