# controller/openapi.yaml
@@ -10,14 +10,32 @@ paths:
         - name: username
           in: query
           required: false
-          style: form
           schema:
             type: string
         - name: password
           in: query
-          required: false
           schema:
             type: string
+        - name: name
+          in: query
+          style: form
+          schema:
+            type: string
+        - name: status
+          in: query
+          style: form
+          schema:
+            type: string
+        - name: current
+          in: query
+          schema:
+            type: integer
+          required: true
+        - name: pageSize
+          in: query
+          schema:
+            type: integer
+          required: true
       responses:
         '200':
           description: response
@@ -84,7 +102,7 @@ paths:
             type: integer
             format: int64
       responses:
-        '204':
+        '200':
           description: delete
         default:
           description: unexpected error
@@ -92,6 +110,31 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+    
+    put:
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: delete
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   schemas:
     Error:
@@ -114,6 +157,9 @@ components:
         password:
           type: string
           maxLength: 64
+        name:
+          type: string
+          maxLength: 64
         email:
           type: string
           maxLength: 128
@@ -128,4 +174,34 @@ components:
           enum:
             - activated
             - frozen
+        role:
+          items:
+            $ref: '#/components/schemas/UserRole'
+          type: array
+        created:
+          type: string
+        updated:
+          type: string
+      required:
+        - username
+        - password
+      type: object
+      
+    UserRole:
+      properties:
+        id:
+          type: integer
+          format: int32
+        user_id:
+          type: integer
+          format: int32
+        role_id:
+          type: integer
+          format: int32
+        role_name:
+          type: string
+        created:
+          type: string
+        updated:
+          type: string
       type: object
