# model/query.sql.go
@@ -38,14 +38,15 @@ func (q *Queries) CheckUserByUsername(ctx context.Context, username string) (int
 }
 
 const createUser = `-- name: CreateUser :one
-INSERT INTO app_user (username, password, email, phone, remark, status, created, updated)
-VALUES ($1, $2, $3, $4, $5, $6, $7, $8)
+INSERT INTO app_user (username, password, name, email, phone, remark, status, created, updated)
+VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9)
 RETURNING id, username, password, name, email, phone, remark, status, created, updated
 `
 
 type CreateUserParams struct {
 	Username string
 	Password string
+	Name     string
 	Email    string
 	Phone    string
 	Remark   string
@@ -58,6 +59,7 @@ func (q *Queries) CreateUser(ctx context.Context, arg CreateUserParams) (AppUser
 	row := q.db.QueryRow(ctx, createUser,
 		arg.Username,
 		arg.Password,
+		arg.Name,
 		arg.Email,
 		arg.Phone,
 		arg.Remark,
@@ -179,7 +181,7 @@ func (q *Queries) ListUser(ctx context.Context, arg ListUserParams) ([]ListUserR
 
 const updateUser = `-- name: UpdateUser :exec
 UPDATE app_user
-SET username = $2, password = $3, email = $4, phone = $5, remark = $6, status = $7, created = $8, updated = $9
+SET username = $2, password = $3, name = $4, email = $5, phone = $6, remark = $7, status = $8, created = $9, updated = $10
 WHERE id = $1
 RETURNING id, username, password, name, email, phone, remark, status, created, updated
 `
@@ -188,6 +190,7 @@ type UpdateUserParams struct {
 	ID       int32
 	Username string
 	Password string
+	Name     string
 	Email    string
 	Phone    string
 	Remark   string
@@ -201,6 +204,7 @@ func (q *Queries) UpdateUser(ctx context.Context, arg UpdateUserParams) error {
 		arg.ID,
 		arg.Username,
 		arg.Password,
+		arg.Name,
 		arg.Email,
 		arg.Phone,
 		arg.Remark,
